# lwproj

./: .gitignore  CMakeLists.txt  README.md
build-doubles/: cmake_install.cmake
build-test/: cmake_install.cmake  lwproj
data_input/: MVcases.json  gptcases.json  s3Dcases.json
data_input/Esc_curves/: Esc_kext_curve_100_100_1011.08.csv  Esc_kext_curve_100_100_1071.07.csv  Esc_kext_curve_100_100_1143.84.csv  Esc_kext_curve_100_100_1214.12.csv  Esc_kext_curve_100_100_1283.52.csv  Esc_kext_curve_100_100_1363.94.csv  Esc_kext_curve_100_100_1447.33.csv  Esc_kext_curve_100_100_150.06.csv  Esc_kext_curve_100_100_1535.71.csv  Esc_kext_curve_100_100_1619.09.csv  Esc_kext_curve_100_100_1696.57.csv  Esc_kext_curve_100_100_1769.06.csv  Esc_kext_curve_100_100_280.19.csv  Esc_kext_curve_100_100_280.25.csv  Esc_kext_curve_100_100_280.30.csv  Esc_kext_curve_100_100_280.50.csv  Esc_kext_curve_100_100_280.56.csv  Esc_kext_curve_100_100_281.08.csv  Esc_kext_curve_100_100_281.78.csv  Esc_kext_curve_100_100_282.35.csv  Esc_kext_curve_100_100_283.04.csv  Esc_kext_curve_100_100_284.08.csv  Esc_kext_curve_100_100_285.59.csv  Esc_kext_curve_100_100_288.03.csv  Esc_kext_curve_100_100_291.53.csv  Esc_kext_curve_100_100_295.41.csv  Esc_kext_curve_100_100_298.83.csv  Esc_kext_curve_100_100_301.91.csv  Esc_kext_curve_100_100_304.92.csv  Esc_kext_curve_100_100_307.94.csv  Esc_kext_curve_100_100_310.48.csv  Esc_kext_curve_100_100_312.48.csv  Esc_kext_curve_100_100_314.34.csv  Esc_kext_curve_100_100_316.38.csv  Esc_kext_curve_100_100_319.01.csv  Esc_kext_curve_100_100_322.11.csv  Esc_kext_curve_100_100_325.53.csv  Esc_kext_curve_100_100_328.86.csv  Esc_kext_curve_100_100_331.70.csv  Esc_kext_curve_100_100_334.11.csv  (+42 more)
data_output/heating_rates/: HR_MC_gpt1_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_gpt1_power_Nphot21.000000_Pesc0_scatter0.csv  HR_MC_gpt1_power_Nphot23.000000_Pesc0_scatter0.csv  HR_MC_gpt1_power_Nphot25.000000_Pesc0_scatter0.csv  HR_MC_gpt1_power_Nphot28.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot0.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot20.000000_Pesc1_scatter0.csv  HR_MC_gpt21_power_Nphot22.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot22.000000_Pesc0_scatter1.csv  HR_MC_gpt21_power_Nphot22.000000_Pesc1_scatter0.csv  HR_MC_gpt21_power_Nphot220.000000_Pesc1_scatter0.csv  HR_MC_gpt21_power_Nphot23.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot24.000000_Pesc0_scatter0.csv  HR_MC_gpt21_power_Nphot24.000000_Pesc1_scatter0.csv  HR_MC_gpt21_power_Nphot25.000000_Pesc1_scatter0.csv  HR_MC_gpt21_power_Nphot28.000000_Pesc0_scatter0.csv  HR_MC_gpt3_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D0_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D0_power_Nphot22.000000_Pesc0_scatter0.csv  HR_MC_r3D0_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D0_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D10_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D10_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D10_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D11_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D11_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D11_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D12_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D12_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D12_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D13_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D13_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D13_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D14_power_Nphot20.000000_Pesc0_scatter0.csv  HR_MC_r3D14_power_Nphot32.000000_Pesc0_scatter0.csv  HR_MC_r3D14_power_Nphot32.000000_Pesc0_scatter1.csv  HR_MC_r3D15_power_Nphot20.000000_Pesc0_scatter0.csv  (+140 more)
include/: MC.h  constants.h  photprop.h  plane_parallel.h  util.h
src/: MC.cpp  main.cpp  photprop.cpp  plane_parallel.cpp
tools/: analyse.py  build_all_MC.sh  build_all_MC.sh.save  build_all_PP.sh  case_builder.py  case_reader.py  diff_analyse.py  diff_analyse_PPMC.py  profile_metrics.py  run_loop_1D.sh  run_loop_3D.sh
